--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="Image/png" sizes="32x32" href="Images/favicon-32x32.png">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300;400;700&display=swap" rel="stylesheet">
@@ -15,9 +15,9 @@
 <body>
   <main class="container">
     <section class="card">
-      <img class="banner" src="images/bg-pattern-card.svg" alt="">
+      <img class="banner" src="Images/bg-pattern-card.svg" alt="">
       <div class="avater">        
-        <img class="photo" src="images/image-victor.jpg" alt="">
+        <img class="photo" src="Images/image-victor.jpg" alt="">
         <p class="name">Victor Crest <span class="age">26</span></p>
         <p class="country">London</p>
       </div>    
